--- a/tovar4.html
+++ b/tovar4.html
@@ -31,7 +31,7 @@
 	<h1 class="textov1">Макро-світ</h1>
 		<h2 class="text1">Опси:</h2>
 			<p class="text">Ваш власний макро-світ з власною макро-екосистемою. Просто гарна та красива річ.</p>
-			<p class="text">нема в наявності</p>	
+			<p class="text">В наявності</p>	
 			<p class="text">Ціна: 15 грн.</p>
 		<h2 class="text1">Склад:</h2>
 			<p class="text">1 баночка<br>
